--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -13,14 +13,14 @@
 # with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.
 %>
 
-<div class="background">
+<div class="background" style="background-color:#052E80;background-image:url('https://raw.githubusercontent.com/dafran/imgs/master/fondoweb.jpg');">
   <div class="container pt-9 pb-8">
     <div class="row">
       <div class="col-md-12 col-sm-12 text-center">
-        <h1 id="main-text" class="display-4 mb-4"> <%= t("landing.welcome").html_safe %></h1>
-        <p class="lead offset-lg-2 col-lg-8 col-sm-12 "><%= t("landing.about", href: link_to(t("greenlight"), "https://bigbluebutton.org/2018/07/09/greenlight-2-0/", target: "_blank", rel: "noopener")).html_safe %></p>
+        <h1 id="main-text" class="display-4 mb-4" style="color:#ffffff"> Bienvenido al administrador de videoconferencias de CieaSypal.</h1>
+        <p class="lead offset-lg-2 col-lg-8 col-sm-12 ">En este sitio web, usted podrá crear sus propias salas y ser anfitrión de reuniones o ingresar a las salas de otros utilizando el enlace proporcionado.</p>
         <%= link_to "https://youtu.be/Hso8yLzkqj8", target: "_blank" do %>
-          <h4><%= t("landing.video") %> <i class="far fa-play-circle ml-1"></i></h4>
+          <h4 style="color: #467fcf;">Si desea conocer como funciona, puede ver el tutorial sobre cómo utilizar el servicio. <i class="far fa-play-circle ml-1"></i></h4>
         <% end %>
       </div>
 
