--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -18,7 +18,7 @@
     <div class="row">
       <div class="col-md-12 col-sm-12 text-center">
         <h1 id="main-text" class="display-4 mb-4" style="color:#ffffff"> Bienvenido al administrador de videoconferencias de CieaSypal.</h1>
-        <p class="lead offset-lg-2 col-lg-8 col-sm-12 ">En este sitio web, usted podrá crear sus propias salas y ser anfitrión de reuniones o ingresar a las salas de otros utilizando el enlace proporcionado.</p>
+        <p class="lead offset-lg-2 col-lg-8 col-sm-12" style="color:#000; background-color: rgba(255,255,255,0.4);border-radius:0.3em;">En este sitio web, usted podrá crear sus propias salas y ser anfitrión de reuniones o ingresar a las salas de otros utilizando el enlace proporcionado.</p>
         <%= link_to "https://youtu.be/Hso8yLzkqj8", target: "_blank" do %>
           <h4 style="color: #467fcf;">Si desea conocer como funciona, puede ver el tutorial sobre cómo utilizar el servicio. <i class="far fa-play-circle ml-1"></i></h4>
         <% end %>
