Minor spelling update

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -18,7 +18,7 @@
     <div class="row">
       <div class="col-md-12 col-sm-12 text-center">
         <h1 id="main-text" class="display-4 mb-4"> Soluzioni innovative per la formazione digitale.</h1>
-        <p class="lead offset-lg-2 col-lg-8 col-sm-12 ">Aiutiamo enti di formazione, scuole, attivita professionali nel loro percorso di crescita e le accompagniamo, con professionalità e competenza, nelle delicate fasi della transformazione digitale nel settore della formazione online.</p>
+        <p class="lead offset-lg-2 col-lg-8 col-sm-12 ">Aiutiamo enti di formazione, scuole, attivita professionali nel loro percorso di crescita e le accompagniamo, con professionalità e competenza, nelle delicate fasi della trasformazione digitale nel settore della formazione online.</p>
           <a target="_blank" href="https://www.edafosformazione.it/videoconference"><h4>Guarda il tutorial sull'utilizzo di Edafos Video Conference <i class="far fa-play-circle ml-1"></i></h4></a>
       </div>
 
