--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -18,7 +18,7 @@
     <div class="row">
       <div class="col-md-12 col-sm-12 text-center">
         <h1 id="main-text" class="display-4 mb-4"> <%= t("landing.welcome").html_safe %></h1>
-        <p class="lead offset-lg-2 col-lg-8 col-sm-12 ">A platform for virtual classrooms!</p>
+        <p class="lead offset-lg-2 col-lg-8 col-sm-12 ">A platform for virtual consultations!</p>
       </div>
 
     </div>
