--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -14,7 +14,7 @@
 %>
 
 <footer class="footer pt-3">
-  <p class="text-center mb-1">&copy; Eroom Online. All Rights Reserved.</p>
+  <p class="text-center mb-1">&copy; eRoom Online. All Rights Reserved.</p>
 </footer>
 
 <%= render "shared/components/cookie_warning" %>
