further changes in home page

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -17,8 +17,7 @@
   <div class="container pt-9 pb-8">
     <div class="row">
       <div class="col-md-12 col-sm-12 text-center">
-        <h1 id="main-text" class="display-4 mb-4">Welcome to eRoom</h1>
-        <p class="lead offset-lg-2 col-lg-8 col-sm-12 "></p>
+        <img src="https://raw.githubusercontent.com/juniorojha/greenlight/eroom/app/assets/images/eroom.png" style="width: 100%;"/>
       </div>
 
     </div>
