--- a/app/views/main/components/_features.html.erb
+++ b/app/views/main/components/_features.html.erb
@@ -16,6 +16,6 @@
 
 <div class="container mt-8 mb-6 text-center">
 
-<img src="https://github.com/juniorojha/greenlight/raw/afdal/public/front2.png" />
+<img src="https://raw.githubusercontent.com/juniorojha/greenlight/eroom/public/trainers.jpg" />
 
 </div>
