home page new design

--- a/app/views/main/components/_features.html.erb
+++ b/app/views/main/components/_features.html.erb
@@ -16,6 +16,6 @@
 
 <div class="container mt-8 mb-6 text-center">
 
-<img src="https://raw.githubusercontent.com/juniorojha/greenlight/eroom/public/trainers.jpg" />
+<img src="https://raw.githubusercontent.com/juniorojha/greenlight/eroom/public/trainers.jpg" style="width:100%;" />
 
 </div>
