--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -17,12 +17,10 @@
   <div class="container pt-9 pb-8">
     <div class="row">
       <div class="col-md-12 col-sm-12 text-center">
-        <h1 id="main-text" class="display-4 mb-4"> <%= t("landing.welcome").html_safe %></h1>
-        <p class="lead offset-lg-2 col-lg-8 col-sm-12 ">A platform for virtual consultations!</p>
+        <img src="https://raw.githubusercontent.com/juniorojha/greenlight/eroom/public/trainers.jpg" style="width:100%;" />
       </div>
 
     </div>
   </div>
 </div>
 
-<%= render "main/components/features" %>
