--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -17,7 +17,7 @@
   <div class="container pt-9 pb-8">
     <div class="row">
       <div class="col-md-12 col-sm-12 text-center">
-        <img src="https://raw.githubusercontent.com/juniorojha/greenlight/eroom/app/assets/images/eroom.png" style="width: 100%;"/>
+        <img src="https://raw.githubusercontent.com/juniorojha/greenlight/eroom/public/frontimage_small.jpg" style="width: 100%;"/>
       </div>
 
     </div>
