long name fix in rooms

--- a/app/views/admins/components/_rooms.html.erb
+++ b/app/views/admins/components/_rooms.html.erb
@@ -15,7 +15,7 @@
 
 <div class="row">
   <div class="col-12">
-    <div class="table-responsive">
+    <div class="table-responsive" style="overflow-x: scroll;">
       <table id="rooms-table" class="table table-hover table-outline table-vcenter text-nowrap card-table">
         <thead>
           <tr>
